# Book-Deep-Learning-in-Quantitative-Trading

./: pyproject.toml
Chapter2/: 01_statistics.ipynb  02_time_series_models.ipynb  03_volatility_clustering.ipynb
Chapter3/: 01_regression_classification.ipynb
Chapter7/: 01_limit_order_books.ipynb  02_predictive_signal_lob.ipynb
